r165 - october, 8, 2009
    * membre : actions > executeCreatepending > clever determination of
      associationId
    * CompteForm : takes associationId as parameter
    * compte : actions > give associationId as parameter to the form
    

r164 - october, 8, 2009
    * membre : actions > executeAcl > fixes a bug if no credentials has been set
    * membre : actions > _processForm > redirect to ACL form after creation of
      a new member
      

r163 - october, 8, 2009
    * membre : actions > fixes a bug in executeMap
    

r162 - october, 8, 2009
    * membre : security.yml > edit credentials is required to valide a pending
      subscription
      

r161 - october, 8, 2009
    * MembrePeer : doSelectOrderBy() > useless associationId computation has 
      been removed
    * membre : actions > index > retrieve pending subscriptions
    * membre : templates > index > pending subscriptions are displayed
    * membre : actions > new action executeValidate


r160 - october, 8, 2009
    * association : templates > loginSuccess.php > explicit message
    * MembrePeer : doSelectPending() method
    

r159 - october, 8, 2009
    * myUser.class.php : new method getTemporaryAssociationId()
    * membre : actions > executeFirstcreate > give the temporary associationId
    

r158 - october, 8, 2009
    * StatutPeer::getCriteriaEnabled() is now getCriteriaEnabledForAssociation()
    * MembreForm.class.php is up date
    * membre : actions > asociationId is given to each form
    

r157 - october, 8, 2009
    * membre : templates > pendingSuccess.php > explicit message
    * StatutPeer::getCriteriaForEnabled() takes associationId as parameter


r156 - october, 8, 2009
    * membre : actions > new action requestSubscription
    * membre : templates > loginSuccess > link to request a member subscription
    * membre : templates > _form has been refactored
    * schema.yml : membre.actif is now an integer and not a boolean
    * model has been rebuilt
    
